--- a/server/templates/services.html
+++ b/server/templates/services.html
@@ -2,7 +2,76 @@
 
 {% block content %}
 <div class="container">
-    <h1>Services</h1>
-    <!-- Add your dashboard content here -->
+    <div class="d-flex justify-content-between align-items-center mb-3">
+        <h1 class="my-0">Services</h1>
+        <div class="d-flex align-items-center">
+            <a href="{{ url_for('frontend.add_service') }}" class="btn btn-secondary btn-sm">
+                <i class="fas fa-plus"></i> Add New Service
+            </a>
+        </div>
+    </div>
+
+    <table class="table">
+        <thead>
+            <tr>
+                <th>ID</th>
+                <th>Name</th>
+                <th>Port</th>
+                <th>Actions</th>
+            </tr>
+        </thead>
+        <tbody>
+            {% if services %}
+                {% for service in services %}
+                    <tr>
+                        <td>{{ service[0] }}</td>
+                        <td>{{ service[1] }}</td>
+                        <td>{{ service[2] }}</td>
+                        <td>
+                            <button class="btn btn-secondary btn-sm delete-service" data-id="{{ service[0] }}">
+                                <i class="fas fa-trash"></i> Delete
+                            </button>
+                        </td>
+                    </tr>
+                {% endfor %}
+            {% else %}
+                <tr>
+                    <td colspan="4">No services available.</td>
+                </tr>
+            {% endif %}
+        </tbody>
+    </table>
 </div>
+
+<script type="text/javascript">
+    document.addEventListener("DOMContentLoaded", function() {
+        // Handle the "Delete" button click
+        document.querySelectorAll(".delete-service").forEach(function(button) {
+            button.addEventListener("click", function() {
+                var serviceId = this.getAttribute("data-id");
+                if (confirm("Are you sure you want to delete this service?")) {
+                    sendDeleteRequest('/api/services/' + serviceId);
+                }
+            });
+        });
+    });
+
+    function sendDeleteRequest(url) {
+        fetch(url, {
+            method: 'DELETE'
+        })
+        .then(function(response) {
+            if (response.ok) {
+                window.location.reload();
+            } else {
+                // Handle the error here
+                alert("Error deleting the service.");
+            }
+        })
+        .catch(function(error) {
+            // Handle network or other errors
+            alert("Error: " + error.message);
+        });
+    }
+</script>
 {% endblock %}
