--- a/server/templates/add_service.html
+++ b/server/templates/add_service.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <div class="container">
-    <h1>Add Service</h1>
+    <h4 class="my-0 mt-2 mb-2">Add Service</h4>
     <form id="addServiceForm">
         <div class="form-group">
             <label for="serviceName" class="text-secondary">Service Name</label>
