--- a/server/templates/submissions.html
+++ b/server/templates/submissions.html
@@ -3,7 +3,7 @@
 {% block content %}
 <div class="container">
     <div class="d-flex justify-content-between align-items-center mb-3">
-        <h1 class="my-0">Submissions</h1>
+        <h4 class="my-0 mt-2">Submissions</h4>
     </div>
     <table class="table mx-auto">
         <thead>
@@ -11,6 +11,7 @@
                 <th>ID</th>
                 <th>Flag</th>
                 <th>Status</th>
+                <th>Target</th>
                 <th>Script</th>
                 <th>Service</th>
             </tr>
@@ -30,17 +31,35 @@
                                 <strong><span style="color: red;">{{ submission[2] }}</span></strong>
                             {% endif %}
                         </td>
-
                         <td>{{ submission[3] }}</td>
                         <td>{{ submission[4] }}</td>
+                        <td>{{ submission[5] }}</td>
                     </tr>
                 {% endfor %}
             {% else %}
                 <tr>
-                    <td colspan="3">No submissions available.</td>
+                    <td colspan="5">No submissions available.</td>
                 </tr>
             {% endif %}
         </tbody>
     </table>
+
+    <!-- Pagination -->
+    <nav>
+        <ul class="pagination justify-content-center">
+            {% if submissions %}
+                {% if page > 1 %}
+                    <li class="page-item">
+                        <a class="page-link" href="{{ url_for('frontend.submissions', page=page-1) }}">Previous</a>
+                    </li>
+                {% endif %}
+                {% if submissions|length == 10 %}
+                    <li class="page-item">
+                        <a class="page-link" href="{{ url_for('frontend.submissions', page=page+1) }}">Next</a>
+                    </li>
+                {% endif %}
+            {% endif %}
+        </ul>
+    </nav>
 </div>
 {% endblock %}
